# simple-logging-setup

./: .gitignore  Makefile  README.md  README.rst  REQUIREMENTS.development.txt  pyproject.toml  setup.cfg  setup.py  test.py
simple_logging_setup/: __init__.py  configuration.py  filter.py  formatter.py  platform.py  terminal.py
